# pwswdpp

./: .gitignore  Makefile  README.md  dingux  frontend_start  meson.build
include/: event_poller.hpp  events.hpp  framebuffer.hpp  overlay_manager.hpp
include/devices/: audio.hpp  event_poller.hpp  framebuffer.hpp  power.hpp  screen.hpp  uinput.hpp
installer/: S92pwswdpp.sh  default.gcw0.desktop  install.sh
source/: main.cpp
